--- a/public/index.html
+++ b/public/index.html
@@ -3,27 +3,40 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <head>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <title>Front End Developer | Web Developer - Freelance</title>
+      <meta name="robots" content="noodp" />
+      <meta property="og:locale" content="en_US" />
+      <meta property="og:type" content="website" />
+      <meta
+        property="og:title"
+        content="Front End Developer | Web Development - Freelancer"
+      />
+      <meta
+        property="og:description"
+        content="Hire Professional Freelance webdevloper. Building animations and interactive experiences, hi-end solutions &amp; website maintenance"
+      />
+      <meta
+        property="og:site_name"
+        content="Front End Developer | Web Development - Freelancer"
+      />
+      <meta name="twitter:card" content="summary" />
+      <meta
+        name="twitter:description"
+        content="Hire Professional Freelance webdevloper. Building animations and interactive experiences, hi-end solutions &amp; website maintenance"
+      />
+      <meta
+        name="twitter:title"
+        content="Front End Developer | Web Development - Freelancer"
+      />
+      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+      integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+      crossorigin=""/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>React App</title>
   </head>
   <body>
